// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Group should match snapshot 1`] = `<AlertGroupInline />`;

exports[`Standard Alert Group is not a toast alert group 1`] = `
<AlertGroup>
  <AlertGroupInline>
    <ul
      className="pf-c-alert-group"
    >
      <li
        key="0"
      >
        <Alert
          key=".0"
          title="alert title"
          variant="danger"
        >
          <div
            aria-label="Danger Alert"
            className="pf-c-alert pf-m-danger"
            data-ouia-component-id={0}
            data-ouia-component-type="PF4/Alert"
            data-ouia-safe={true}
          >
            <AlertIcon
              variant="danger"
            >
              <div
                className="pf-c-alert__icon"
              >
                <ExclamationCircleIcon
                  color="currentColor"
                  noVerticalAlign={false}
                  size="sm"
                >
                  <svg
                    aria-hidden={true}
                    aria-labelledby={null}
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style={
                      Object {
                        "verticalAlign": "-0.125em",
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      transform=""
                    />
                  </svg>
                </ExclamationCircleIcon>
              </div>
            </AlertIcon>
            <h4
              className="pf-c-alert__title"
            >
              <span
                className="pf-u-screen-reader"
              >
                Danger alert:
              </span>
              alert title
            </h4>
          </div>
        </Alert>
      </li>
    </ul>
  </AlertGroupInline>
</AlertGroup>
`;

exports[`Toast Alert Group contains expected modifier class 1`] = `
<AlertGroup
  isToast={true}
>
  <Portal
    containerInfo={
      <div>
        <ul
          class="pf-c-alert-group pf-m-toast"
        >
          <li>
            <div
              aria-label="Warning Alert"
              class="pf-c-alert pf-m-warning"
              data-ouia-component-id="1"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 576 512"
                  width="1em"
                >
                  <path
                    d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    transform=""
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Warning alert:
                </span>
                alert title
              </h4>
              
            </div>
          </li>
        </ul>
      </div>
    }
  >
    <AlertGroupInline
      isToast={true}
    >
      <ul
        className="pf-c-alert-group pf-m-toast"
      >
        <li
          key="0"
        >
          <Alert
            key=".0"
            title="alert title"
            variant="warning"
          >
            <div
              aria-label="Warning Alert"
              className="pf-c-alert pf-m-warning"
              data-ouia-component-id={1}
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe={true}
            >
              <AlertIcon
                variant="warning"
              >
                <div
                  className="pf-c-alert__icon"
                >
                  <ExclamationTriangleIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 576 512"
                      width="1em"
                    >
                      <path
                        d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                        transform=""
                      />
                    </svg>
                  </ExclamationTriangleIcon>
                </div>
              </AlertIcon>
              <h4
                className="pf-c-alert__title"
              >
                <span
                  className="pf-u-screen-reader"
                >
                  Warning alert:
                </span>
                alert title
              </h4>
            </div>
          </Alert>
        </li>
      </ul>
    </AlertGroupInline>
  </Portal>
</AlertGroup>
`;

exports[`alertgroup closes when alerts are closed 1`] = `
<AlertGroup
  appendTo={
    <body>
      <div />
      <div />
      <div />
      <div />
      <div>
        <ul
          class="pf-c-alert-group pf-m-toast"
        >
          <li>
            <div
              aria-label="Warning Alert"
              class="pf-c-alert pf-m-warning"
              data-ouia-component-id="1"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 576 512"
                  width="1em"
                >
                  <path
                    d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    transform=""
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Warning alert:
                </span>
                alert title
              </h4>
              
            </div>
          </li>
        </ul>
      </div>
      <div />
      <div>
        <ul
          class="pf-c-alert-group pf-m-toast"
        >
          <li>
            <div
              aria-atomic="false"
              aria-label="Default Alert"
              aria-live="polite"
              class="pf-c-alert"
              data-ouia-component-id="2"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 448 512"
                  width="1em"
                >
                  <path
                    d="M224 512c35.32 0 63.97-28.65 63.97-64H160.03c0 35.35 28.65 64 63.97 64zm215.39-149.71c-19.32-20.76-55.47-51.99-55.47-154.29 0-77.7-54.48-139.9-127.94-155.16V32c0-17.67-14.32-32-31.98-32s-31.98 14.33-31.98 32v20.84C118.56 68.1 64.08 130.3 64.08 208c0 102.3-36.15 133.53-55.47 154.29-6 6.45-8.66 14.16-8.61 21.71.11 16.4 12.98 32 32.1 32h383.8c19.12 0 32-15.6 32.1-32 .05-7.55-2.61-15.27-8.61-21.71z"
                    transform=""
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Default alert:
                </span>
                Test Alert
              </h4>
              <div
                class="pf-c-alert__action"
              >
                <button
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
              </div>
              
            </div>
          </li>
        </ul>
      </div>
    </body>
  }
  isToast={true}
>
  <Portal
    containerInfo={
      <div>
        <ul
          class="pf-c-alert-group pf-m-toast"
        >
          <li>
            <div
              aria-atomic="false"
              aria-label="Default Alert"
              aria-live="polite"
              class="pf-c-alert"
              data-ouia-component-id="2"
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe="true"
            >
              <div
                class="pf-c-alert__icon"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 448 512"
                  width="1em"
                >
                  <path
                    d="M224 512c35.32 0 63.97-28.65 63.97-64H160.03c0 35.35 28.65 64 63.97 64zm215.39-149.71c-19.32-20.76-55.47-51.99-55.47-154.29 0-77.7-54.48-139.9-127.94-155.16V32c0-17.67-14.32-32-31.98-32s-31.98 14.33-31.98 32v20.84C118.56 68.1 64.08 130.3 64.08 208c0 102.3-36.15 133.53-55.47 154.29-6 6.45-8.66 14.16-8.61 21.71.11 16.4 12.98 32 32.1 32h383.8c19.12 0 32-15.6 32.1-32 .05-7.55-2.61-15.27-8.61-21.71z"
                    transform=""
                  />
                </svg>
              </div>
              <h4
                class="pf-c-alert__title"
              >
                <span
                  class="pf-u-screen-reader"
                >
                  Default alert:
                </span>
                Test Alert
              </h4>
              <div
                class="pf-c-alert__action"
              >
                <button
                  aria-label="Close"
                  class="pf-c-button pf-m-plain"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 352 512"
                    width="1em"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      transform=""
                    />
                  </svg>
                </button>
              </div>
              
            </div>
          </li>
        </ul>
      </div>
    }
  >
    <AlertGroupInline
      isToast={true}
    >
      <ul
        className="pf-c-alert-group pf-m-toast"
      >
        <li
          key="0"
        >
          <Alert
            actionClose={
              <AlertActionCloseButton
                aria-label="Close"
                onClose={[MockFunction]}
              />
            }
            isLiveRegion={true}
            key=".0"
            title="Test Alert"
          >
            <div
              aria-atomic="false"
              aria-label="Default Alert"
              aria-live="polite"
              className="pf-c-alert"
              data-ouia-component-id={2}
              data-ouia-component-type="PF4/Alert"
              data-ouia-safe={true}
            >
              <AlertIcon
                variant="default"
              >
                <div
                  className="pf-c-alert__icon"
                >
                  <BellIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 448 512"
                      width="1em"
                    >
                      <path
                        d="M224 512c35.32 0 63.97-28.65 63.97-64H160.03c0 35.35 28.65 64 63.97 64zm215.39-149.71c-19.32-20.76-55.47-51.99-55.47-154.29 0-77.7-54.48-139.9-127.94-155.16V32c0-17.67-14.32-32-31.98-32s-31.98 14.33-31.98 32v20.84C118.56 68.1 64.08 130.3 64.08 208c0 102.3-36.15 133.53-55.47 154.29-6 6.45-8.66 14.16-8.61 21.71.11 16.4 12.98 32 32.1 32h383.8c19.12 0 32-15.6 32.1-32 .05-7.55-2.61-15.27-8.61-21.71z"
                        transform=""
                      />
                    </svg>
                  </BellIcon>
                </div>
              </AlertIcon>
              <h4
                className="pf-c-alert__title"
              >
                <span
                  className="pf-u-screen-reader"
                >
                  Default alert:
                </span>
                Test Alert
              </h4>
              <div
                className="pf-c-alert__action"
              >
                <AlertActionCloseButton
                  aria-label="Close"
                  onClose={[MockFunction]}
                >
                  <Button
                    aria-label="Close"
                    onClick={[MockFunction]}
                    variant="plain"
                  >
                    <button
                      aria-disabled={null}
                      aria-label="Close"
                      className="pf-c-button pf-m-plain"
                      data-ouia-component-id={null}
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe={true}
                      disabled={false}
                      onClick={[MockFunction]}
                      tabIndex={null}
                      type="button"
                    >
                      <TimesIcon
                        color="currentColor"
                        noVerticalAlign={false}
                        size="sm"
                      >
                        <svg
                          aria-hidden={true}
                          aria-labelledby={null}
                          fill="currentColor"
                          height="1em"
                          role="img"
                          style={
                            Object {
                              "verticalAlign": "-0.125em",
                            }
                          }
                          viewBox="0 0 352 512"
                          width="1em"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                            transform=""
                          />
                        </svg>
                      </TimesIcon>
                    </button>
                  </Button>
                </AlertActionCloseButton>
              </div>
            </div>
          </Alert>
        </li>
      </ul>
    </AlertGroupInline>
  </Portal>
</AlertGroup>
`;
